feat!: convert ChatModel into Runnable (#1111)
Co-authored-by: Frederico Araujo <frederico.araujo@ibm.com>
Co-authored-by: Tomáš Dvořák <toomas2d@gmail.com>
Signed-off-by: Frederico Araujo <frederico.araujo@ibm.com>

--- a/docs/modules/agents.mdx
+++ b/docs/modules/agents.mdx
@@ -763,24 +763,28 @@ class CustomAgent(BaseAgent):
                     description="Here you should provide concise answer to the original question."
                 )
 
-            response = await self.model.create_structure(
-                schema=CustomSchema,
-                messages=[
+            response = await self.model.run(
+                [
                     SystemMessage("You are a helpful assistant. Always use JSON format for your responses."),
                     *(self.memory.messages if self.memory is not None else []),
                     *([UserMessage(input)] if isinstance(input, str) else input),
                 ],
+                response_format=CustomSchema,
                 max_retries=kwargs.get("total_max_retries", 3),
-                abort_signal=context.signal,
+                signal=context.signal,
             )
+            assert isinstance(response.output_structured, CustomSchema)
 
-            result = AssistantMessage(response.object["final_answer"])
+            result = AssistantMessage(response.output_structured.final_answer)
             await self.memory.add(result) if self.memory else None
 
             return AgentOutput(
                 output=[result],
                 context={
-                    "state": State(thought=response.object["thought"], final_answer=response.object["final_answer"])
+                    "state": State(
+                        thought=response.output_structured.thought,
+                        final_answer=response.output_structured.final_answer,
+                    )
                 },
             )
 
