--- a/python/examples/notebooks/basics.ipynb
+++ b/python/examples/notebooks/basics.ipynb
@@ -199,25 +199,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The capital of France is Paris. It's known for its iconic landmarks like the Eiffel Tower, Louvre Museum, and Notre-Dame Cathedral. Paris is also famous for its art, culture, cuisine, and fashion. It's situated on the Seine River in the northern part of the country.\n"
-     ]
-    }
-   ],
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "from beeai_framework.backend import ChatModel, ChatModelOutput\n",
     "\n",
     "# Create a ChatModel to interface with granite3.3:8b on a local ollama\n",
     "model = ChatModel.from_name(\"ollama:granite3.3:8b\")\n",
     "\n",
-    "output: ChatModelOutput = await model.create(messages=[user_message])\n",
+    "output: ChatModelOutput = await model.run([user_message])\n",
     "\n",
     "print(output.get_text_content())"
    ]
@@ -233,18 +225,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Visiting the Eiffel Tower is a must when in Paris. You can either admire it from the Champ de Mars or take an elevator ride up for a panoramic view of the city. It's especially magical at night when the tower sparkles with thousands of twinkling lights. Don't forget to enjoy a picnic in the nearby Jardin du Trocadéro or have dinner at one of the many cafés offering views of this iconic monument.\n"
-     ]
-    }
-   ],
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "from beeai_framework.backend import AssistantMessage\n",
     "from beeai_framework.memory import UnconstrainedMemory\n",
@@ -259,7 +243,7 @@
     "    ]\n",
     ")\n",
     "\n",
-    "output: ChatModelOutput = await model.create(messages=memory.messages)\n",
+    "output: ChatModelOutput = await model.run(memory.messages)\n",
     "\n",
     "print(output.get_text_content())"
    ]
@@ -274,18 +258,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Approximately 10% of Ireland is forested, primarily consisting of non-native conifer plantations.\n"
-     ]
-    }
-   ],
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "# Some context that the model will use to provide an answer. Source wikipedia: https://en.wikipedia.org/wiki/Ireland\n",
     "context = \"\"\"The geography of Ireland comprises relatively low-lying mountains surrounding a central plain, with several navigable rivers extending inland.\n",
@@ -299,14 +275,14 @@
     "# Lets reuse our RAG template from earlier!\n",
     "prompt = rag_template.render(RAGTemplateInput(question=\"How much of Ireland is forested?\", context=context))\n",
     "\n",
-    "output: ChatModelOutput = await model.create(messages=[UserMessage(content=prompt)])\n",
+    "output: ChatModelOutput = await model.run([UserMessage(content=prompt)])\n",
     "\n",
     "print(output.get_text_content())"
    ]
   },
   {
-   "cell_type": "markdown",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "## Structured Outputs\n",
     "\n",
@@ -340,14 +316,14 @@
     "    \"Create a fantasy sci-fi character for my new game. This character will be the main protagonist, be creative.\"\n",
     ")\n",
     "\n",
-    "response = await model.create_structure(schema=CharacterSchema, messages=[user_message])\n",
+    "response = await model.run([user_message], response_format=CharacterSchema)\n",
     "\n",
-    "print(response.object)"
+    "print(response.output_structured)"
    ]
   },
   {
-   "cell_type": "markdown",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "## System Prompts\n",
     "\n",
@@ -357,24 +333,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Yarr, ye be askin' 'bout the wee critters that roll into balls, eh? A baby hedgehog be known as a \"hoglet\" or a \"hedgehog pup\". Now, keep yer hands off me treasure chest and let's continue sailin' this ship o' knowledge!\n"
-     ]
-    }
-   ],
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "from beeai_framework.backend import SystemMessage\n",
     "\n",
     "system_message = SystemMessage(content=\"You are pirate. You always respond using pirate slang.\")\n",
     "user_message = UserMessage(content=\"What is a baby hedgehog called?\")\n",
-    "output: ChatModelOutput = await model.create(messages=[system_message, user_message])\n",
+    "output: ChatModelOutput = await model.run([system_message, user_message])\n",
     "\n",
     "print(output.get_text_content())"
    ]
