--- a/python/examples/notebooks/basics_colab.ipynb
+++ b/python/examples/notebooks/basics_colab.ipynb
@@ -256,19 +256,17 @@
    ]
   },
   {
+   "metadata": {},
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "83Yi0qSvG-2p"
-   },
    "outputs": [],
+   "execution_count": null,
    "source": [
     "# Construct ChatModel\n",
     "model = ChatModel.from_name(\"ollama:granite3.3:8b\")\n",
     "\n",
     "question1 = \"Briefly explain quantum computing in simple terms with an example.\"\n",
     "message = UserMessage(content=question1)\n",
-    "output: ChatModelOutput = await model.create(messages=[message])\n",
+    "output: ChatModelOutput = await model.run([message])\n",
     "answer1 = output.get_text_content()\n",
     "\n",
     "print(\"Question: \" + question1)\n",
@@ -276,12 +274,10 @@
    ]
   },
   {
+   "metadata": {},
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "VTUAj7ssG-2p"
-   },
    "outputs": [],
+   "execution_count": null,
    "source": [
     "question2 = \"Hello! Can you tell me what is the capital of France?\"\n",
     "message = UserMessage(content=question2)\n",
@@ -289,7 +285,7 @@
     "# Create a ChatModel to interface with granite3.1-dense:8b on a local ollama\n",
     "# model = ChatModel.from_name(\"ollama:granite3.1-dense:8b\")\n",
     "\n",
-    "output: ChatModelOutput = await model.create(messages=[message])\n",
+    "output: ChatModelOutput = await model.run([message])\n",
     "answer2 = output.get_text_content()\n",
     "print(\"Question: \" + question2)\n",
     "print()\n",
@@ -309,12 +305,10 @@
    ]
   },
   {
+   "metadata": {},
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "Ob2SsoKHG-2p"
-   },
    "outputs": [],
+   "execution_count": null,
    "source": [
     "memory = UnconstrainedMemory()\n",
     "question3 = \"If you had to recommend one thing to do there, what would it be?\"\n",
@@ -325,7 +319,7 @@
     "        UserMessage(content=question3),\n",
     "    ]\n",
     ")\n",
-    "output: ChatModelOutput = await model.create(messages=memory.messages)\n",
+    "output: ChatModelOutput = await model.run(memory.messages)\n",
     "answer3 = output.get_text_content()\n",
     "\n",
     "print(\"Previous Question: \" + question2)\n",
@@ -347,12 +341,10 @@
    ]
   },
   {
+   "metadata": {},
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "G0-ciy-iG-2q"
-   },
    "outputs": [],
+   "execution_count": null,
    "source": [
     "# Some context that the model will use to provide an answer. Source wikipedia: https://en.wikipedia.org/wiki/Ireland\n",
     "context = \"\"\"The geography of Ireland comprises relatively low-lying mountains surrounding a central plain, with several navigable rivers extending inland.\n",
@@ -366,7 +358,7 @@
     "# Lets reuse our RAG template from earlier!\n",
     "question4 = \"How much of Ireland is forested?\"\n",
     "prompt = rag_template.render(RAGTemplateInput(question=question4, context=context))\n",
-    "output: ChatModelOutput = await model.create(messages=[UserMessage(content=prompt)])\n",
+    "output: ChatModelOutput = await model.run([UserMessage(content=prompt)])\n",
     "answer4 = output.get_text_content()\n",
     "\n",
     "print(\"RAG Template:\")\n",
@@ -389,12 +381,10 @@
    ]
   },
   {
+   "metadata": {},
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "2yWs8EbNG-2q"
-   },
    "outputs": [],
+   "execution_count": null,
    "source": [
     "# The output structure definition, note the field descriptions that can help the LLM to understand the intention of the field.\n",
     "class CharacterSchema(BaseModel):\n",
@@ -410,11 +400,11 @@
     "    \"Create a fantasy sci-fi character for my new game. This character will be the main protagonist, be creative.\"\n",
     ")\n",
     "message = UserMessage(question5)\n",
-    "response = await model.create_structure(schema=CharacterSchema, messages=[message])\n",
+    "response = await model.run([message], response_format=CharacterSchema)\n",
     "\n",
     "print(\"Question: \" + question5)\n",
     "print(\"Structured output:\")\n",
-    "object_on_screen(response.object)"
+    "object_on_screen(response.output_structured)"
    ]
   },
   {
@@ -431,18 +421,16 @@
    ]
   },
   {
+   "metadata": {},
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "vxjLDnu7G-2r"
-   },
    "outputs": [],
+   "execution_count": null,
    "source": [
     "pirate_message = \"You are pirate. You always respond using pirate slang.\"\n",
     "system_message = SystemMessage(content=pirate_message)\n",
     "question6 = \"What is a baby hedgehog called?\"\n",
     "message = UserMessage(content=question6)\n",
-    "output: ChatModelOutput = await model.create(messages=[system_message, message])\n",
+    "output: ChatModelOutput = await model.run([system_message, message])\n",
     "answer6 = output.get_text_content()\n",
     "\n",
     "print(\"SystemMessage: \" + pirate_message)\n",
