--- a/python/examples/notebooks/watsonx.ipynb
+++ b/python/examples/notebooks/watsonx.ipynb
@@ -38,22 +38,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Quantum computing is a type of computation that leverages the principles of quantum mechanics to process information. Unlike classical computers that use bits (0s and 1s) to process data, quantum computers use quantum bits, or qubits. Qubits can exist in multiple states at once, thanks to a property called superposition, and can also be entangled, meaning the state of one qubit can be dependent on the state of another, no matter the distance between them. This allows quantum computers to perform certain calculations much faster than classical computers.\n",
-      "\n",
-      "To illustrate, consider a scenario where you need to search through an unsorted phone book with a million entries to find a specific person's name. A classical computer would have to theoretically check each entry one by one until it found the name, taking up to a million steps. A quantum computer, using an algorithm like Grover's, could potentially solve this problem in roughly 1,000 steps. This is a simplification, as quantum computers aren't universally faster and face significant technical challenges, but it gives you the basic idea.\n",
-      "\n",
-      "Another famous example is Shor's algorithm, used for factoring large numbers into primes, which is central to many cryptographic systems. While classical computers would take an incredibly long time for very large numbers, a sufficiently powerful quantum computer could perform this task relatively quickly, effectively breaking many of our current encryption methods.\n"
-     ]
-    }
-   ],
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "from beeai_framework.backend import ChatModel, ChatModelOutput, UserMessage\n",
     "\n",
@@ -68,7 +56,7 @@
     ")\n",
     "\n",
     "message = UserMessage(content=\"Briefly explain quantum computing in simple terms with an example.\")\n",
-    "output: ChatModelOutput = await model.create(messages=[message])\n",
+    "output: ChatModelOutput = await model.run([message])\n",
     "\n",
     "print(output.get_text_content())"
    ]
@@ -83,10 +71,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "import json\n",
     "\n",
@@ -102,9 +90,9 @@
     "\n",
     "user_message = UserMessage(\"Provide a summary of the following book: 'Dune' by Frank Herbert.\")\n",
     "\n",
-    "response = await model.create_structure(schema=BookDetailsSchema, messages=[user_message])\n",
+    "response = await model.run([user_message], response_format=BookDetailsSchema)\n",
     "\n",
-    "print(json.dumps(response.object, indent=4))"
+    "print(json.dumps(response.output_structured, indent=4))"
    ]
   }
  ],
