--- a/python/examples/notebooks/workflows.ipynb
+++ b/python/examples/notebooks/workflows.ipynb
@@ -12,8 +12,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "## Basics of Workflows\n",
     "\n",
@@ -32,19 +32,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running first step!\n",
-      "State after workflow run: message='Hello World'\n"
-     ]
-    }
-   ],
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "import traceback\n",
     "\n",
@@ -85,8 +76,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "## A Multi-Step Workflow with Tools\n",
     "\n",
@@ -98,21 +89,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "from langchain_community.utilities import SearxSearchWrapper\n",
     "from pydantic import Field\n",
     "\n",
-    "from beeai_framework.backend import ChatModel, ChatModelOutput, ChatModelStructureOutput, UserMessage\n",
+    "from beeai_framework.backend import ChatModel, ChatModelOutput, UserMessage\n",
     "from beeai_framework.template import PromptTemplate, PromptTemplateInput"
    ]
   },
   {
-   "cell_type": "markdown",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "Next, we can define our workflow State.\n",
     "\n",
@@ -120,10 +111,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "# Workflow State\n",
     "class SearchAgentState(BaseModel):\n",
@@ -133,25 +124,45 @@
    ]
   },
   {
-   "cell_type": "markdown",
    "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
-    "Next, we define the ChatModel instance that will handle interaction with our LLM. For this example, we'll use IBM Granite 3.1 8B via Ollama. This model will be used to process the search query and generate answers based on the retrieved results."
+    "async def web_search(state: SearchAgentState) -> str:\n",
+    "    print(\"Step: \", \"web_search\")\n",
+    "    # Generate a search query\n",
+    "    prompt = search_query_template.render(QuestionInput(question=state.question))\n",
+    "    response: ChatModelOutput = await model.run([UserMessage(prompt)], schema=WebSearchQuery)\n",
+    "\n",
+    "    # Run search and store results in state\n",
+    "    try:\n",
+    "        state.search_results = str(search_tool.run(response.output_structured.query))\n",
+    "    except Exception:\n",
+    "        print(\"Search tool failed! Agent will answer from memory.\")\n",
+    "        state.search_results = \"No search results available.\"\n",
+    "\n",
+    "    return \"generate_answer\""
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "Next, we define the ChatModel instance that will handle interaction with our LLM. For this example, we'll use IBM Granite 3.1 8B via Ollama. This model will be used to process the search query and generate answers based on the retrieved results."
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "# Create a ChatModel to interface with granite3.3:8b on a local ollama\n",
     "model = ChatModel.from_name(\"ollama:granite3.3:8b\")"
    ]
   },
   {
-   "cell_type": "markdown",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "Since this is a web search agent, we need a way to run web searches. For that, we'll use the SearxSearchWrapper from the Langchain community tools project.\n",
     "\n",
@@ -161,18 +172,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "# Web search tool\n",
     "search_tool = SearxSearchWrapper(searx_host=\"http://127.0.0.1:8888\")"
    ]
   },
   {
-   "cell_type": "markdown",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "In this workflow, we make extensive use of PromptTemplates and structured outputs.\n",
     "\n",
@@ -180,10 +191,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "# PromptTemplate Input Schemas\n",
     "class QuestionInput(BaseModel):\n",
@@ -222,8 +233,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "Now, we can define the first step of the workflow, named web_search.\n",
     "\n",
@@ -236,32 +247,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "async def web_search(state: SearchAgentState) -> str:\n",
-    "    print(\"Step: \", \"web_search\")\n",
-    "    # Generate a search query\n",
-    "    prompt = search_query_template.render(QuestionInput(question=state.question))\n",
-    "    response: ChatModelStructureOutput = await model.create_structure(\n",
-    "        schema=WebSearchQuery, messages=[UserMessage(prompt)]\n",
-    "    )\n",
-    "\n",
-    "    # Run search and store results in state\n",
-    "    try:\n",
-    "        state.search_results = str(search_tool.run(response.object[\"query\"]))\n",
-    "    except Exception:\n",
-    "        print(\"Search tool failed! Agent will answer from memory.\")\n",
-    "        state.search_results = \"No search results available.\"\n",
-    "\n",
-    "    return \"generate_answer\""
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "The next step in the workflow is generate_answer.\n",
     "\n",
@@ -274,10 +261,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "async def generate_answer(state: SearchAgentState) -> str:\n",
     "    print(\"Step: \", \"generate_answer\")\n",
@@ -285,7 +272,7 @@
     "    prompt = search_rag_template.render(\n",
     "        SearchRAGInput(question=state.question, search_results=state.search_results or \"No results available.\")\n",
     "    )\n",
-    "    output: ChatModelOutput = await model.create(messages=[UserMessage(prompt)])\n",
+    "    output: ChatModelOutput = await model.run([UserMessage(prompt)])\n",
     "\n",
     "    # Store answer in state\n",
     "    state.answer = output.get_text_content()\n",
@@ -293,30 +280,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "Finally, we define the overall workflow and add the steps we developed earlier. This combines everything into a cohesive agent that can perform web searches and generate answers."
-   ]
+   "cell_type": "markdown",
+   "source": "Finally, we define the overall workflow and add the steps we developed earlier. This combines everything into a cohesive agent that can perform web searches and generate answers."
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Step:  web_search\n",
-      "Search tool failed!\n",
-      "Step:  generate_answer\n",
-      "*****\n",
-      "Question:  What is the term for a baby hedgehog?\n",
-      "Answer:  The term for a baby hedgehog is \"hoglet.\"\n"
-     ]
-    }
-   ],
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "try:\n",
     "    # Define the structure of the workflow graph\n",
@@ -340,8 +312,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "# Adding Memory to a Workflow Agent\n",
     "\n",
@@ -351,10 +323,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "# Workflow State\n",
     "from pydantic import InstanceOf\n",
@@ -369,7 +341,7 @@
     "\n",
     "\n",
     "async def chat(state: ChatState) -> str:\n",
-    "    output: ChatModelOutput = await model.create(messages=state.memory.messages)\n",
+    "    output: ChatModelOutput = await model.run(state.memory.messages)\n",
     "    state.output = output.get_text_content()\n",
     "    return Workflow.END\n",
     "\n",
