--- a/python/examples/notebooks/workflows_colab.ipynb
+++ b/python/examples/notebooks/workflows_colab.ipynb
@@ -83,12 +83,10 @@
    ]
   },
   {
+   "metadata": {},
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "YiBMslRPHB6d"
-   },
    "outputs": [],
+   "execution_count": null,
    "source": [
     "# Imports\n",
     "\n",
@@ -100,7 +98,7 @@
     "from langchain_community.utilities import SearxSearchWrapper\n",
     "from pydantic import BaseModel, Field, InstanceOf, ValidationError\n",
     "\n",
-    "from beeai_framework.backend.chat import ChatModel, ChatModelOutput, ChatModelStructureOutput\n",
+    "from beeai_framework.backend.chat import ChatModel, ChatModelOutput\n",
     "from beeai_framework.backend.message import AssistantMessage, SystemMessage, UserMessage\n",
     "from beeai_framework.memory.unconstrained_memory import UnconstrainedMemory\n",
     "from beeai_framework.template import PromptTemplate, PromptTemplateInput\n",
@@ -372,22 +370,18 @@
    ]
   },
   {
+   "metadata": {},
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "l-wCcG0wHB6p"
-   },
    "outputs": [],
+   "execution_count": null,
    "source": [
     "async def web_search(state: SearchAgentState) -> str:\n",
     "    print(\"\\nRunning Step 1: web_search\")\n",
     "\n",
     "    # Generate a search query\n",
     "    prompt = search_query_template.render(QuestionInput(question=state.question))\n",
-    "    response: ChatModelStructureOutput = await model.create_structure(\n",
-    "        schema=WebSearchQuery, messages=[UserMessage(prompt)]\n",
-    "    )\n",
-    "    generated_search_query = response.object[\"query\"]\n",
+    "    response: ChatModelOutput = await model.run([UserMessage(prompt)], response_format=WebSearchQuery)\n",
+    "    generated_search_query = response.output_structured.query\n",
     "    print(\"Search query: \" + generated_search_query)\n",
     "\n",
     "    # Run search and store results in state\n",
@@ -421,12 +415,10 @@
    ]
   },
   {
+   "metadata": {},
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "mLgYxhuSHB6q"
-   },
    "outputs": [],
+   "execution_count": null,
    "source": [
     "async def generate_answer(state: SearchAgentState) -> str:\n",
     "    print(\"\\nRunning Step 2: generate_answer\")\n",
@@ -435,7 +427,7 @@
     "    prompt = search_rag_template.render(\n",
     "        SearchRAGInput(question=state.question, search_results=state.search_results or \"No results available.\")\n",
     "    )\n",
-    "    output: ChatModelOutput = await model.create(messages=[UserMessage(prompt)])\n",
+    "    output: ChatModelOutput = await model.run([UserMessage(prompt)])\n",
     "\n",
     "    # Store answer in state\n",
     "    state.answer = output.get_text_content()\n",
@@ -499,12 +491,10 @@
    ]
   },
   {
+   "metadata": {},
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "g06VeMmFHB6r"
-   },
    "outputs": [],
+   "execution_count": null,
    "source": [
     "# Workflow State\n",
     "\n",
@@ -515,7 +505,7 @@
     "\n",
     "\n",
     "async def chat(state: ChatState) -> str:\n",
-    "    output: ChatModelOutput = await model.create(messages=state.memory.messages)\n",
+    "    output: ChatModelOutput = await model.run(state.memory.messages)\n",
     "    state.output = output.get_text_content()\n",
     "    return Workflow.END\n",
     "\n",
