--- a/docs/modules/cache.mdx
+++ b/docs/modules/cache.mdx
@@ -208,11 +208,11 @@ async def main() -> None:
     llm.config(parameters=ChatModelParameters(max_tokens=25), cache=SlidingCache(size=50))
 
     print(await llm.cache.size())  # 0
-    first = await llm.create(messages=[UserMessage("Who is Amilcar Cabral?")])
+    first = await llm.run([UserMessage("Who is Amilcar Cabral?")])
     print(await llm.cache.size())  # 1
 
     # new request with the EXACTLY same input will be retrieved from the cache
-    second = await llm.create(messages=[UserMessage("Who is Amilcar Cabral?")])
+    second = await llm.run([UserMessage("Who is Amilcar Cabral?")])
     print(first.get_text_content() == second.get_text_content())  # True
     print(await llm.cache.size())  # 1
 
